--- a/index.html
+++ b/index.html
@@ -6,6 +6,61 @@
     <title>Document</title>
 </head>
 <body>
+    <title>Sviluppo di una pagina web - Blog Epicode</title>
     
+    <img src="EPICODE.png"
+
+    <table>
+        <caption>Registro presenze</caption>
+        <tr>
+            <th>Nome</th>
+            <th>Anno</th>
+            <th>Presenze</th>
+        </tr>
+        <tr>
+            <td>Luca</td>
+            <td>2021</td>
+            <td>30</td>
+        </tr>
+        <tr>
+            <td>Maria</td>
+            <td>2021</td>
+            <td>27</td>
+        </tr>
+        <tr>
+            <td>Gianni</td>
+            <td>2021</td>
+            <td>26</td>
+        </tr>
+        <tr> <td colspan="2">Media annua</tr> <td>27,66</td> </tr>
+    </table>
+    
+    <table>
+        <thead>
+            <tr>
+                <th>Filiale</th>
+                <th>Incasso</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Sede A</td> <td>12.000</td>
+            </tr>
+            <tr>
+                <td>Sede B</td> <td>14.000</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>Totale</td> <td>26.000</td>
+            </tr>
+        </tfoot>
+    </table>
+
+    <form method="POST" action="codice.php" autocomplete="on">
+        <fieldset>
+            <legend>Anagrafica</legend>
+        </fieldset>
+    </form>
 </body>
 </html>
