--- a/index.html
+++ b/index.html
@@ -7,60 +7,46 @@
 </head>
 <body>
     <title>Sviluppo di una pagina web - Blog Epicode</title>
-    
-    <img src="EPICODE.png"
+
+    <img src="EPICODE.png" width="400" height="400">
 
     <table>
-        <caption>Registro presenze</caption>
+        <caption>Diffusione dei CSS</caption>
         <tr>
-            <th>Nome</th>
             <th>Anno</th>
-            <th>Presenze</th>
+            <th>% di utilizzo</th>
+            <th>Supporto browser</th>
         </tr>
         <tr>
-            <td>Luca</td>
-            <td>2021</td>
-            <td>30</td>
+            <td>2000</td>
+            <td>20%</td>
+            <td>17%</td>
         </tr>
         <tr>
-            <td>Maria</td>
-            <td>2021</td>
-            <td>27</td>
+            <td>2002</td>
+            <td>35%</td>
+            <td>22%</td>
         </tr>
         <tr>
-            <td>Gianni</td>
-            <td>2021</td>
-            <td>26</td>
+            <td>2004</td>
+            <td>45%</td>
+            <td>42%</td>
         </tr>
-        <tr> <td colspan="2">Media annua</tr> <td>27,66</td> </tr>
+        <tr>
+            <td>2008</td>
+            <td>80%</td>
+            <td>51</td>
+        </tr>
+        <tr>
+            <td>2012</td>
+            <td>100%</td>
+            <td>76%</td>
+        </tr>
     </table>
-    
-    <table>
-        <thead>
-            <tr>
-                <th>Filiale</th>
-                <th>Incasso</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Sede A</td> <td>12.000</td>
-            </tr>
-            <tr>
-                <td>Sede B</td> <td>14.000</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td>Totale</td> <td>26.000</td>
-            </tr>
-        </tfoot>
-    </table>
-
-    <form method="POST" action="codice.php" autocomplete="on">
-        <fieldset>
-            <legend>Anagrafica</legend>
-        </fieldset>
-    </form>
+    <p>Un test di validazione potrà essere fatto tramite il tool online - LINK ESTERNO:</p>
+    <a href="https://jigsaw.w3.org/css-validator/">Vai a google</a>
+    <video>
+     <source src="https://youtu.be/dvOvHXruEDM" type="video/mp4">
+    </video>
 </body>
 </html>
