--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
     <title>Sviluppo di una pagina web - Blog Epicode</title>
 
     <img src="EPICODE.png" width="400" height="400">
+    <p>Come creare un template per i post<br>
+        di Mario Rossi - pubblicato il 25-10-2020<br>
+        La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni da applicare a tutte le pagine</p>
 
+    <p>Le varie aree saranno quindi suddivise in:<br>
+Contenuti di intestazione del tag <header><br>
+Contenuti centrali variabili del tag <main> (corpo principale)<br>
+Contenuti di fine pagina comuni, da inserire nel tag <footer><br></p>
+
+    <p>Formattazione del codice</p>
+    <p>Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da selezionare con i CSS. Perciò i passi saranno:<br>
+Progettare il markup assegnando ad ogni specifico testo il tag appropriato<br>
+Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso<br>
+Applicare gli stili CSS</p>
+    <p>L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressoché totale.</p>
     <table>
         <caption>Diffusione dei CSS</caption>
         <tr>
@@ -43,9 +57,9 @@
             <td>76%</td>
         </tr>
     </table>
-    <p>Un test di validazione potrà essere fatto tramite il tool online - LINK ESTERNO:</p>
-    <a href="https://jigsaw.w3.org/css-validator/">Vai a google</a>
-    <video>
+    <p>Un test di validazione potrà essere fatto tramite il tool online - LINK ESTERNO:<a href="https://jigsaw.w3.org/css-validator/">Vai a google</a> dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come loro:
+- INSERIRE VIDEO YOUTUBE:</p>
+<video>
      <source src="https://youtu.be/dvOvHXruEDM" type="video/mp4">
     </video>
 </body>
