--- a/index.html
+++ b/index.html
@@ -6,9 +6,38 @@
     <title>Document</title>
 </head>
 <body>
-    <title>Sviluppo di una pagina web - Blog Epicode</title>
-
-    <img src="EPICODE.png" width="400" height="400">
+<header>
+    <div>
+    <img src="EPICODE.png" width="250" height="60">
+    <p>
+    <p dir="auto" style="vertical-align: inherit;">Epicode - Il blog degli sviluppatori</p>
+    </p>
+    </div>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html" title="Pagina iniziale">
+                </a>
+            </li>
+        </li>
+        <a href="articoli.html" title="Elelnco degli articoli pubblicati">
+            </a>
+        </li>
+        <li>
+            <a href="contatti.html" title="candidati inviando il tuo cv">
+            </a>
+        </li>
+        </ul>
+        </nav>
+        </header>
+        <hr>
+        <main>
+            <article>
+                <h1>
+                    <p dir="auto" style="vertical-align: inherit;">Vieni a creare un modello per i post</p>
+                </h1>
+                <p dir="auto" style="vertical-align: inherit;">di Mario Rossi - pubblicato il 25-10-2020</p>
+            <p>"La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le"</p>
     <p>Come creare un template per i post<br>
         di Mario Rossi - pubblicato il 25-10-2020<br>
         La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni da applicare a tutte le pagine</p>
@@ -22,8 +51,6 @@ Contenuti di fine pagina comuni, da inserire nel tag <footer><br></p>
     <p>Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da selezionare con i CSS. Perciò i passi saranno:<br>
 Progettare il markup assegnando ad ogni specifico testo il tag appropriato<br>
 Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso<br>
-Applicare gli stili CSS</p>
-    <p>L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressoché totale.</p>
     <table>
         <caption>Diffusione dei CSS</caption>
         <tr>
